# jericho_mkII

./: .buildinfo  .clang-format  CMakeLists.txt  PROJECT_STATUS.md  README.md  VISUAL_SUMMARY.md  architecture.html  citation.html  cuda_kernels.html  genindex.html  index.html  objects.inv  output_formats.html  performance_tuning.html  run_production_test.sh  running_simulations.html  searchindex.js
.github/workflows/: build.yml  docs.yml
_sources/: architecture.rst.txt  citation.rst.txt  cuda_kernels.rst.txt  getting_started.rst.txt
api/: boundaries.html  mpi_manager.html  particle_buffer.html
build_cpu/: CMakeCache.txt  Makefile  cmake_install.cmake  jericho_mkII
cuda/: boundaries.cu  boundaries.cu.bak  convert_to_cpu.sh  fields.cu  fields.cu.bak  particles.cu
docs/: Makefile  architecture.rst  citation.rst  conf.py  configuration.rst  cuda_kernels.rst  getting_started.rst  index.rst  mpi_parallelism.rst  performance_tuning.rst  running_simulations.rst
docs/_build/doctrees/: architecture.doctree  citation.doctree  configuration.doctree  cuda_kernels.doctree  environment.pickle  getting_started.doctree  index.doctree  mpi_parallelism.doctree  output_formats.doctree  performance_tuning.doctree  running_simulations.doctree  troubleshooting.doctree
docs/_build/doctrees/api/: boundaries.doctree  fields.doctree  mpi_manager.doctree  particle_buffer.doctree
docs/_build/html/: configuration.html  getting_started.html  index.html  mpi_parallelism.html  search.html  searchindex.js  troubleshooting.html
docs/_build/html/_sources/: index.rst.txt  output_formats.rst.txt  performance_tuning.rst.txt  troubleshooting.rst.txt
docs/_build/html/_sources/api/: boundaries.rst.txt  fields.rst.txt  particle_buffer.rst.txt
docs/_build/html/api/: fields.html
docs/api/: mpi_manager.rst
docs/md/: 00_READ_ME_FIRST.md  BEFORE_AFTER_VERIFICATION.md  BUILD_AND_TEST.md  CPU_BUILD_STATUS.md  CPU_FALLBACK_STATUS.md  DOCUMENTATION_INDEX.md  ENERGY_CONSERVATION_TEST_RESULTS.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  JERICHO_MKII_COMPLETE_STATUS.md  PHASE11_3_AMPERE_COMPLETE.md  PHASE11_3_QUICK_REFERENCE.md  PHASE11_4_PRODUCTION_VALIDATION.md  PHASE12_TEST1_RESULTS.md  PHASE12_TEST1_VALIDATED.md  PHASE12_TEST2_VALIDATED.md  PHASE12_TEST3_VALIDATED.md  PHYSICS_COMPLIANCE_REPORT.md
examples/: minimal_test.toml  reconnection.toml
include/: ampere_solver.h  boris_pusher.h  config.h  field_arrays.h  ghost_cell_exchange.h  io_manager.h  kernels_cpu.h  kernels_cpu_optimized.h  kernels_cpu_simd.h  mpi_domain.h  mpi_domain_state.h  mpi_manager.h  ohms_law_solver.h  particle_buffer.h  platform.h  platform.h.orig  platform.h.rej  poisson_solver.h
inputs/: production_test_fug.toml
output/: diagnostics.csv
outputs/production_test_fug/: test_20251115_215030.log.mpi_2ranks
src/: ampere_solver.cpp  boris_pusher.cpp  config.cpp  field_arrays.cpp  ghost_cell_exchange.cpp  io_manager.cpp  kernels_cpu.cpp  kernels_cpu_optimized.cpp  main.cpp  main_mpi.cpp  mpi_manager.cpp  ohms_law_solver.cpp  particle_buffer.cpp  platform.cpp  poisson_solver.cpp
web/: README.md  VISUALIZATION_GUIDE.md  demo.html  index.html  requirements.txt  server.py
web/static/: visualization.js
